# cfcli

./: .gitignore  Cargo.toml
src/: main.rs
src/auth/: mod.rs
src/commands/: parse.rs
src/util/: mod.rs
src/utils/: mod.rs  state.rs
