[package]
name = "cfcli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11", features=["json", "blocking", "cookies"]}
scraper = "0.19.0"
tokio = {version = "1", features=["full"]}
rand = "0.8.5"
colored = "2.1.0"
rpassword = "7.3.1"
regex = "1.10.3"
