[package]
name = "cfcli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11", features=["blocking", "cookies"]}
rand = "0.8.5"
colored = "2.1.0"
rpassword = "7.3.1"
regex = "1.10.3"
clap = { version = "4.5.2", features = ["derive"] }
itertools = "0.12.1"
scraper = "0.19.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
futures = "0.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
once_cell = "1.19.0"
